added solution to ex 2-01

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "C_Cpp.errorSquiggles": "Disabled",
     "files.associations": {
         "istream": "c",
-        "string": "c"
+        "string": "c",
+        "stdio.h": "c",
+        "limits.h": "c",
+        "float.h": "c"
     }
 }
