added solution to ex 3-4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "string": "c",
         "stdio.h": "c",
         "limits.h": "c",
-        "float.h": "c"
+        "float.h": "c",
+        "math.h": "c"
     }
 }
