added solution to exercise 5-14

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "stdio.h": "c",
         "limits.h": "c",
         "float.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "stdlib.h": "c",
+        "string.h": "c"
     }
 }
