added solution to ex 6-06

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "float.h": "c",
         "math.h": "c",
         "stdlib.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "__locale": "c",
+        "cstring": "c"
     }
 }
